fixing highlight wordwrap

--- a/src/jquery.ui.tagging.css
+++ b/src/jquery.ui.tagging.css
@@ -6,14 +6,18 @@
 
 .ui-tagging .ui-tagging-highlight {
     position: absolute;
-    padding: 5px;
     overflow: hidden;
 }
-.ui-tagging .ui-tagging-highlight div {
+.ui-tagging .ui-tagging-highlight span {
     color: transparent;
     font-size: 13px;
     line-height: 18px;
     white-space: pre-wrap;
+ 	white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */ 
 }
 
 .ui-tagging .ui-tagging-wrap {
@@ -24,24 +28,18 @@
     border: 0;
 }
 
-.ui-tagging div > span {
+.ui-tagging span > mark {
     background-color: #D8DFEA;
     font-weight: normal !important;
 }
 
 .ui-tagging textarea {
     display: block;
-    font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
     background: transparent;
     border-width: 0;
-    font-size: 13px;
-    height: 18px;
-    outline: none;
     resize: none;
     vertical-align: top;
     width: 100%;
-    line-height: 18px;
-    overflow: hidden;
 }
 
 .ui-autocomplete {
